--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [    
         {
-            "name": "g++.exe - 生成和调试活动文件",
+            "name": "g++.exe - buid",
             "type": "cppdbg",
             "request": "launch",
             "program": "C:\\windows\\System32\\cmd.exe",
@@ -30,7 +30,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: g++.exe 生成活动文件"
+            "preLaunchTask": "C/C++: g++.exe build"
         }
     ]
 }
